# brize

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix
migrations/: 0000_initialize.sql
scripts/: migrate.sh  setup.sh
setup/: Cargo.toml  config.toml  run.rs
setup/migrations/: 0000_initialize.sql  0001_initialize_with_teams.sql
setup/migrations/2025-08-05-190210_create_users/: up.sql
setup/migrations/2025-08-05-190435_create_teams/: up.sql
setup/migrations/2025-08-05-190448_create_activity_log/: up.sql
setup/src/: main.rs  migrate.rs  schema.rs  seed.rs  setup.rs
src/: db.rs  lib.rs
src/tools/: error.rs  mod.rs  settings.rs
