[package]
name = "brize"
version = "0.1.0"
edition = "2024"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "Minimalistic Rust Framework"
license = "MIT/Apache-2.0"
repository = "https://github.com/jonkarrer/brize"
readme = "README.md"
keywords = ["framework", "starter", "template", "boilerplate"]
categories = ["software"]


[dependencies]
# optional dependencies for setup scripts
colored ={ version = "3.0.0", optional = true}
config = { version = "0.15.13", features = ["yaml"]}
dialoguer ={version = "0.11.0", optional = true} 
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-json", "with-uuid"] }
tokio = {version="1.46.1", features = ["macros"]}
uuid = { version = "1.17.0", features = ["v4"], optional = true }

[dev-dependencies]

[features]
setup-deps = [ "dialoguer", "uuid", "colored"]
uuid = ["dep:uuid"]

[[bin]]
name = "setup"
path = "./setup/run.rs"
required-features = ["setup-deps"]
