[workspace]
members = [".", "setup"]

[workspace.dependencies]
tokio = {version="1.46.1", features = ["macros", "rt-multi-thread"]}
config = { version = "0.15.13", features = ["yaml"]}
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-time", "with-json", "with-uuid"] }

[package]
name = "brize"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "Minimalistic Rust Template"
license = "MIT" 
repository = "https://github.com/jonkarrer/brize"
readme = "README.md"
keywords = ["framework", "starter", "template", "boilerplate"]
categories = ["software"]

[dependencies]
tokio = {workspace = true}
config = {workspace = true}
sea-orm = {workspace = true}

[dev-dependencies]