[workspace]
members = [".", "setup"]

[workspace.dependencies]
tokio = {version="1.46.1", features = ["macros", "rt-multi-thread"]}
config = { version = "0.15.13", features = ["yaml"]}
diesel = { version = "2.2.0", features = ["postgres"] }
rand_core ={ version = "0.9.3", features=["os_rng"] }
bcrypt = "0.17.0"
rand = "0.9.2"
argon2 = "0.5.3"

[package]
name = "brize"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "Minimalistic Rust Template"
license = "MIT" 
repository = "https://github.com/jonkarrer/brize"
readme = "README.md"
keywords = ["framework", "starter", "template", "boilerplate"]
categories = ["software"]

[dependencies]
tokio = {workspace = true}
config = {workspace = true}

#Password Hashing
rand = {workspace = true}
rand_core = {workspace=true}
argon2= {workspace = true}
bcrypt = {workspace=true}

[dev-dependencies]
